# fathon

./: pyproject.toml  setup.py  vcpkg.json
.github/workflows/: windows.yml
fathon/: dcca.pyx  dfa.pyx
