[build-system]
requires = ["setuptools>=61", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fathon"
version = "1.3.3.post2" # Consider changing this for a new release
description = "A python package for detrended fluctuation analysis (DFA) and related algorithms."
readme = "README.md"
authors = [
  { name = "Stefano Bianchi", email = "fathon.package@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering"
]

# Runtime dependencies
dependencies = [
  "numpy>=1.24.4"
]

[project.urls]
"Homepage" = "https://github.com/stfbnc/fathon.git"
"Documentation" = "https://fathon.readthedocs.io/"
"Bug Reports" = "https://github.com/stfbnc/fathon/issues"
"Source" = "https://github.com/stfbnc/fathon/"

[tool.setuptools]
packages = ["fathon"]
